HSTJ-35: ConstantPropagation implemented with tests